// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VButton Default render. Snapshot test 1`] = `
<div
  className="sc-AxjAm btSQui action_button "
  onClick={[Function]}
>
  Button test name
</div>
`;

exports[`VButton Rendering with props. Snapshot test 1`] = `
<div
  className="sc-AxjAm btSQui action_button some_className"
  onClick={[Function]}
>
  Button test name
</div>
`;
